--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,25 @@
 @import url(./reset.css);
 @import url(./header.css);
 
+main #first-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 3rem 1rem 3rem 10rem;
+}
+
+main #first-section div {
+  align-self: baseline;
+}
+
+main #first-section #big-text {
+  font-weight: 800;
+  font-size: 2.5rem;
+  width: 70%;
+  margin-bottom: 1rem;
+}
+
+main #first-section #normal-text {
+  width: 65%;
+  text-align: left;
+}
